Fixed blurred background image edges

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -10,12 +10,12 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  bottom: -1em;
-  filter: blur(0.5em) brightness(40%);
-  left: -1em;
+  bottom: -2em;
+  filter: blur(1em) brightness(40%);
+  left: -2em;
   position: absolute;
-  right: -1em;
-  top: -1em;
+  right: -2em;
+  top: -2em;
   z-index: -1;
 }
 
